--- a/main/templates/cart_view.html
+++ b/main/templates/cart_view.html
@@ -86,11 +86,6 @@
                     document.location.replace(
                     '/mycart/change_count/?id='+id+'&count='+document.getElementById('count_'+id).value);
                 }
-
-
-
-
-
             </script>
         </div>
         <div class="col-md-2">
@@ -172,6 +167,10 @@
                                 <h4>Платежные данные:</h4>
                                 <hr>
                                 <div class="form-group">
+                                    <label for="id_cc_name">{{pay_form.cc_name.label}}:</label>
+                                    {{pay_form.cc_name}}
+                                </div>
+                                <div class="form-group">
                                     <label for="id_cc_number">{{pay_form.cc_number.label}}:</label>
                                     {{pay_form.cc_number}}
                                 </div>
@@ -198,6 +197,10 @@
                             <div class="modal-body">
                                 <h4>Платежные данные:</h4>
                                 <hr>
+                                <div class="form-group">
+                                    <label for="id_cc_name">{{pay_form.cc_name.label}}:</label>
+                                    {{pay_form.cc_name}}
+                                </div>
                                 <div class="form-group">
                                     <label for="id_cc_number">{{pay_form.cc_number.label}}:</label>
                                     {{pay_form.cc_number}}
@@ -227,6 +230,8 @@
                             document.getElementById('id_cc_code').placeholder = '000';
                             document.getElementById('id_cc_expiry').className = 'form-control';
                             document.getElementById('id_cc_expiry').placeholder = '00/00';
+                            document.getElementById('id_cc_name').className = 'form-control';
+                            document.getElementById('id_cc_name').placeholder = 'SIDOROV IVAN';
                         </script>
                     </div>
                 </div>
