--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -105,14 +105,6 @@
                         document.getElementById('ph_brand').value = params['brand'];
                         document.getElementById('ph_group_by').value = params['group_by'];
                         document.getElementById('ph_search').value = params['search'];
-
-
-
-
-
-
-
-
                     </script>
                 </div>
             </div>
@@ -273,6 +265,28 @@
             </a>
             {% endif %}
         </div>
+        <script>
+            if (params['category'] != undefined && params['category'] != 'undefined'){
+                document.getElementById('dropdownMenuButtonCategory').style = 'color: orange';
+            }
+            if ((params['min_price'] != undefined && params['min_price'] != 'undefined') ||
+             (params['max_price'] != undefined && params['max_price'] != 'undefined')){
+                document.getElementById('dropdownMenuButtonPrice').style = 'color: orange';
+            }
+            if ((params['min_count'] != undefined && params['min_count'] != 'undefined') ||
+             (params['max_count'] != undefined && params['max_count'] != 'undefined')){
+                document.getElementById('dropdownMenuButtonCount').style = 'color: orange';
+            }
+            if (params['brand'] != undefined && params['brand'] != 'undefined' && params['brand'] != ''){
+                document.getElementById('dropdownMenuButtonBrand').style = 'color: orange';
+            }
+            if (params['category'] != undefined && params['category'] != 'undefined'){
+                document.getElementById('dropdownMenuButtonCategory').style = 'color: orange';
+            }
+            if (params['group_by'] != undefined && params['group_by'] != 'undefined'){
+                document.getElementById('dropdownMenuButtonGroup').style = 'color: orange';
+            }
+        </script>
     </div>
 
     <div class="mt-1" style="border-left: solid lightgrey 13px">
@@ -300,40 +314,52 @@
                     <div class="col-md-6">
                         <a href="/add/in/?in=cart&id={{product.id}}"><img src="{% static 'cart.png' %}" height="40px"></a>
                         <a href="/add/in/?in=star&id={{product.id}}"><img src="{% static 'star.png' %}" width="40px"></a>
+                        <div class="mt-2">
+                        {% if product.count > 0 %}
+
+                            {% if product.count > 3 %}
+                            {% if product.count > 9 %}
+                                <span style="display: block;
+                                              background: green;
+                                              border-radius: 100%;
+                                              height: 30px;
+                                              width: 30px;
+                                              margin: 0;">
+                                </span>
+                            {% else %}
+                                <span style="display: block;
+                                              background: yellow;
+                                              border-radius: 100%;
+                                              height: 30px;
+                                              width: 30px;
+                                              margin: 0;">
+                                </span>
+                            {% endif %}
+
+                            {% else %}
+                                <span style="display: block;
+                                              background: red;
+                                              border-radius: 100%;
+                                              height: 30px;
+                                              width: 30px;
+                                              margin: 0;">
+                                </span>
+                            {% endif %}
+                        {% else %}
+                            <div class="col-md-2">
+                                <span style="display: block;
+                                              background: black;
+                                              border-radius: 100%;
+                                              height: 30px;
+                                              width: 30px;
+                                              margin: 0;">
+                                </span>
+                            </div>
+                        {% endif %}
+                        </div>
                     </div>
                 </div>
-                <hr>
-                {% if product.count > 0 %}
-                <div class="row">
-                    <div class="col-md-2">
-                        <span style="display: block;
-                                      background: green;
-                                      border-radius: 100%;
-                                      height: 20px;
-                                      width: 20px;
-                                      margin: 0;">
-                        </span>
-                    </div>
-                    <div class="col-md-10">
-                        В наличии {{product.count}}шт
-                    </div>
-                </div>
-                {% else %}
-                <div class="row">
-                    <div class="col-md-2">
-                        <span style="display: block;
-                                      background: red;
-                                      border-radius: 100%;
-                                      height: 20px;
-                                      width: 20px;
-                                      margin: 0;">
-                        </span>
-                    </div>
-                    <div class="col-md-10">
-                        Нет в наличии
-                    </div>
-                </div>
-                {% endif %}
+
             </div>
         </div>
         {% endfor %}
