--- a/main/templates/cart_view.html
+++ b/main/templates/cart_view.html
@@ -12,7 +12,7 @@
             {% for cart in carts %}
             {% with cart.product as product %}
             <div class="media">
-                <img src="{% static 'products' %}/{{cart.product.imgpath}}.png/" class="mr-3" alt="..."
+                <img src="{% static 'products' %}/{{cart.product.imgpath}}.png" class="mr-3" alt="..."
                      style="width: 100px; height:100px">
                 <div class="media-body">
                     <div>
