--- a/main/templates/wrapper.html
+++ b/main/templates/wrapper.html
@@ -33,8 +33,21 @@
         </div>
     </div>
 </nav>
+
 {% block content %}
 {% endblock %}
+<footer style="
+    padding: 2.5rem 0;
+    color: #999;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-top: .05rem solid #e5e5e5;
+" class="mt-5">
+  <p>Сайт для подготовки тестировщиков - TestGym.</p>
+  <p>
+    <a href="#">Наверх</a>
+  </p>
+</footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
