--- a/main/templates/wrapper.html
+++ b/main/templates/wrapper.html
@@ -36,7 +36,7 @@
 
 {% block content %}
 {% endblock %}
-<footer style="
+<div style="
     padding: 2.5rem 0;
     color: #999;
     text-align: center;
@@ -47,7 +47,7 @@
   <p>
     <a href="#">Наверх</a>
   </p>
-</footer>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -57,5 +57,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/fd0b43b7ca.js" crossorigin="anonymous"></script>
 </body>
 </html>
