--- a/main/templates/favorites_view.html
+++ b/main/templates/favorites_view.html
@@ -1,4 +1,4 @@
-{% include 'wrapper.html' %}
+{% extends 'wrapper.html' %}
 {% load static %}
 {% block content %}
 
@@ -65,9 +65,16 @@
                             </div>
                             <div class="col-md-2">
                                 <br><br>
-                                <a class="btn btn-danger" href="/myfavorites/delete/?id={{favorite.id}}">
-                                    Удалить
-                                </a>
+                                <div style="width: 100px">
+                                    <a class="btn btn-danger btn-block" href="/myfavorites/delete/?id={{favorite.id}}">
+                                        Удалить
+                                    </a>
+                                    <a href="/add/in/?in=cart&id={{product.id}}" class="btn btn-info btn-block mt-1" id="in_cart_link_{{product.id}}">Купить</a>
+                                </div>
+                        <script>
+                            document.getElementById('in_cart_link_{{product.id}}').href = "/add/in/?in=cart&id={{product.id}}&from=" +
+                                document.location.href.replace('?', '~').split('&').join('№')
+                        </script>
                             </div>
                         </div>
                     </div>
