--- a/users/templates/user_change.html
+++ b/users/templates/user_change.html
@@ -67,6 +67,7 @@
 
             <button type="submit" class="btn btn-danger">Изменить информацию</button>
         </form>
+        <a href="/users/user/changepassword/" class="text-info"><b>Изменить пароль</b></a>
     </div>
 </div>
 {% endblock %}
